--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -69,7 +69,7 @@
    </property>
    <widget class="QMenu" name="menuMain">
     <property name="title">
-     <string>Arquivo</string>
+     <string>&amp;Arquivo</string>
     </property>
     <addaction name="actionSave"/>
     <addaction name="actionSourceFolder"/>
@@ -78,11 +78,11 @@
    </widget>
    <widget class="QMenu" name="menuPatches">
     <property name="title">
-     <string>Retalhos</string>
+     <string>&amp;Retalhos</string>
     </property>
     <widget class="QMenu" name="menuTamanho_dos_recortes">
      <property name="title">
-      <string>Tamanho</string>
+      <string>&amp;Tamanho</string>
      </property>
      <addaction name="action19x19"/>
      <addaction name="action20x20"/>
@@ -96,7 +96,7 @@
    </widget>
    <widget class="QMenu" name="menuTools">
     <property name="title">
-     <string>Imagens</string>
+     <string>&amp;Imagens</string>
     </property>
     <addaction name="actionPrevious"/>
     <addaction name="actionNext"/>
@@ -119,7 +119,7 @@
   </widget>
   <action name="actionDestinationFolder">
    <property name="text">
-    <string>Definir diretório de destino de retalhos</string>
+    <string>Definir diretório de &amp;destino de retalhos</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+D</string>
@@ -127,7 +127,7 @@
   </action>
   <action name="actionSourceFolder">
    <property name="text">
-    <string>Definir o diretório de origem de imagens</string>
+    <string>&amp;Abrir imagens de um diretório</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+A</string>
@@ -141,7 +141,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Girar 90º</string>
+    <string>Girar &amp;90º</string>
    </property>
   </action>
   <action name="actionTurn180">
@@ -152,7 +152,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Girar 180º</string>
+    <string>Girar 1&amp;80º</string>
    </property>
   </action>
   <action name="actionTurn270">
@@ -163,7 +163,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Girar 270º</string>
+    <string>Girar 2&amp;70º</string>
    </property>
   </action>
   <action name="actionInverter">
@@ -178,7 +178,7 @@
   </action>
   <action name="actionProcess">
    <property name="text">
-    <string>Processar</string>
+    <string>&amp;Processar</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+P</string>
@@ -229,7 +229,7 @@
   </action>
   <action name="actionNext">
    <property name="text">
-    <string>Próxima imagem</string>
+    <string>&amp;Próxima imagem</string>
    </property>
    <property name="shortcut">
     <string>F5</string>
@@ -237,7 +237,7 @@
   </action>
   <action name="actionSave">
    <property name="text">
-    <string>Salvar</string>
+    <string>&amp;Salvar</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
@@ -245,7 +245,7 @@
   </action>
   <action name="actionPrevious">
    <property name="text">
-    <string>Imagem anterior</string>
+    <string>Imagem &amp;anterior</string>
    </property>
    <property name="shortcut">
     <string>F4</string>
