--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -127,7 +127,7 @@
     <bool>true</bool>
    </property>
    <property name="checked">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="text">
     <string>Girar &amp;90º</string>
@@ -138,7 +138,7 @@
     <bool>true</bool>
    </property>
    <property name="checked">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="text">
     <string>Girar 1&amp;80º</string>
@@ -149,7 +149,7 @@
     <bool>true</bool>
    </property>
    <property name="checked">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="text">
     <string>Girar 2&amp;70º</string>
@@ -201,6 +201,9 @@
    <property name="checkable">
     <bool>true</bool>
    </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>20x20 (Pavani et al.; 2010)</string>
    </property>
@@ -210,7 +213,7 @@
     <bool>true</bool>
    </property>
    <property name="checked">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="text">
     <string>24x24 (Viola, Jones; 2001, 2004)</string>
